[package]
name = "check-received"
version = "0.1.0"
authors = ["wonjongin <wji0227@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
crossterm = "0.18"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]